--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   "homepage": "https://github.com/electron-userland/electron-spellchecker",
   "dependencies": {
     "@nornagon/cld": "^2.4.9",
-    "@felixrieseberg/spellchecker": "^4.0.8",
+    "@nornagon/spellchecker": "^4.0.7",
     "bcp47": "^1.1.2",
     "debug": "^4.1.1",
-    "electron-remote": "^1.3.0",
+    "electron-remote": "https://github.com/frontapp/electron-remote/tarball/front/electron-5",
     "keyboard-layout": "^2.0.15",
     "lru-cache": "^5.1.1",
     "mkdirp": "^0.5.1",
