--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@felixrieseberg/spellchecker": "^4.0.10",
     "bcp47": "^1.1.2",
     "debug": "^4.1.1",
-    "electron-remote": "^1.3.0",
+    "electron-remote": "https://github.com/frontapp/electron-remote/tarball/front/electron-5",
     "keyboard-layout": "^2.0.15",
     "lru-cache": "^5.1.1",
     "mkdirp": "^0.5.1",
